--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
                 <div class="video-stack-container">
                     
-                    <a href="https://wa.me/DeinNummerHier" class="video-top">
+                    <a href="https://wa.link/8bfvny" class="video-top">
                         <div class="video-thumb">
                             <div class="play-btn-circle">
                                 <div class="play-arrow"></div>
