--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <span style="text-decoration: line-through; color: #999; font-size: 0.75rem;">399€</span>
             <span style="color: var(--color-primary); font-weight: bold;">GRATIS</span>
         </div>
-        <a href="https://wa.me/DeinNummerHier" class="btn btn-whatsapp" style="width: auto; padding: 10px 20px; font-size: 0.9rem;">
+        <a href="https://wa.link/8bfvny" class="btn btn-whatsapp" style="width: auto; padding: 10px 20px; font-size: 0.9rem;">
             Jetzt Sichern
         </a>
     </div>
