--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                         Vergiss komplizierte Technik. Wir zeigen dir, wie du ChatGPT nutzt, um Geld zu verdienen. Punkt.
                     </p>
                     <p style="margin-top: 20px; color: #666;">
-                        Wir haben tausenden Menschen gezeigt, wie man einfache Texte kopiert, einfügt und damit ein seriöses Einkommen aufbaut. Ohne Vorkenntnisse.
+                       Keine komplizierte Technik, kein Chaos. Wir zeigen dir Schritt für Schritt, wie du ChatGPT nutzt, um damit Geld zu verdienen. Einfach und verständlich. Schon tausende Menschen haben mit unserer Anleitung gelernt, wie man einfache Texte kopiert, einfügt – und damit ein seriöses Nebeneinkommen startet. Ganz ohne Vorwissen.
                     </p>
                 </div>
                 
