--- a/index.html
+++ b/index.html
@@ -352,22 +352,16 @@
             .about-image-container { max-height: 350px; }
             .graph-container { padding: 15px; }
             .graph-label-y { font-size: 10px; }
-            
-            /* Move widget up on mobile to avoid covering the sticky bar */
             .whatsapp-widget { bottom: 90px; right: 20px; }
         }
 
         /* =========================================
            9. UTILITIES
            ========================================= */
-        .top-bar {
-            background: var(--color-bg-dark); color: white; text-align: center;
-            padding: 8px 0; font-size: 0.85rem; position: sticky; top: 0; z-index: 100;
-        }
         .header-main {
             border-bottom: 1px solid var(--color-border); padding: 20px 0;
             background: rgba(255,255,255,0.95); backdrop-filter: blur(10px);
-            position: sticky; top: 36px; z-index: 90;
+            position: sticky; top: 0; z-index: 90; /* CHANGED TO TOP 0 */
         }
         .mobile-sticky-bar {
             position: fixed; bottom: 0; left: 0; width: 100%;
@@ -380,12 +374,6 @@
     </style>
 </head>
 <body>
-
-    <div class="top-bar">
-        <div class="container">
-            ⚠️ Der kostenlose Zugang schließt in: <span id="timer" style="color: #FCA5A5; font-weight:700; margin-left:5px;">03:59:12</span>
-        </div>
-    </div>
 
     <header class="header-main">
         <div class="container flex-center" style="justify-content: space-between;">
@@ -418,9 +406,14 @@
                         Keine Agentur gründen. Kein Vorwissen. Einfach Texte von der KI schreiben lassen und bezahlt werden. 100% Anfängerfreundlich.
                     </p>
 
-                    <div style="display: flex; align-items: baseline; gap: 15px; margin-bottom: 30px;">
+                    <div style="display: flex; align-items: baseline; gap: 15px; margin-bottom: 20px;">
                         <span style="text-decoration: line-through; color: var(--color-text-muted); font-size: 1.2rem;">399,00€</span>
                         <span style="color: var(--color-primary); font-weight: 700; font-size: 1.8rem;">0,00€</span>
+                    </div>
+
+                    <div class="timer-box" style="margin-bottom: 30px; display: inline-flex; align-items: center; gap: 10px; background: #FEF2F2; border: 1px solid #FECACA; padding: 10px 20px; border-radius: 8px; color: #EF4444; font-weight: 600; font-size: 0.95rem;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+                        <span>Angebot endet in: <span id="timer" style="font-variant-numeric: tabular-nums; font-weight: 700; color: #B91C1C;">03:59:12</span></span>
                     </div>
 
                     <div class="desktop-cta" style="max-width: 450px;">
@@ -678,52 +671,6 @@
             <div style="text-align: center; margin-top: 50px;">
                  <a href="https://wa.link/8bfvny" class="btn btn-whatsapp" style="width: auto; display: inline-flex;">
                     <svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
-                    <div class="btn-text-col">
-                        <span>Jetzt Videokurs anfragen</span>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </section>
-    <section class="section section-bg">
-        <div class="container">
-            <h2 class="display-2" style="text-align: center; margin-bottom: 60px;">Das sagen Teilnehmer</h2>
-            <div class="grid-3">
-                <div class="review-card">
-                    <div class="stars">★★★★★</div>
-                    <p style="font-style: italic;">"Ich kann kaum Englisch und keine Technik. Trotzdem habe ich im ersten Monat 1.200€ verdient. ChatGPT macht alles."</p>
-                    <p style="margin-top: 15px; font-weight: bold;">- Michael R.</p>
-                </div>
-                <div class="review-card">
-                    <div class="stars">★★★★★</div>
-                    <p style="font-style: italic;">"Endlich was einfaches. Kein Trading, kein Verkaufen. Einfach Texte erstellen und fertig."</p>
-                    <p style="margin-top: 15px; font-weight: bold;">- Julia K.</p>
-                </div>
-                <div class="review-card">
-                    <div class="stars">★★★★★</div>
-                    <p style="font-style: italic;">"Der Kurs auf WhatsApp ist super. Man bekommt sofort die Videos und kann starten."</p>
-                    <p style="margin-top: 15px; font-weight: bold;">- Thomas B.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer style="background: var(--color-bg-dark); color: #64748B; padding: 60px 0 40px 0; text-align: center;">
-        <div class="container">
-            <div class="logo" style="color: white; margin-bottom: 20px;">R&S CONSULTING</div>
-            <div style="border-top: 1px solid rgba(255,255,255,0.1); padding-top: 40px; display: flex; justify-content: center; gap: 20px; font-size: 0.8rem;">
-                <a href="#">Impressum</a><a href="#">Datenschutz</a><a href="#">AGB</a>
-            </div>
-            <p class="text-small" style="margin-top: 20px; opacity: 0.5;">&copy; 2024 R&S Consulting Group.</p>
-        </div>
-    </footer>
-
-    <a href="https://wa.link/8bfvny" target="_blank" class="whatsapp-widget">
-        <div class="whatsapp-message-bubble">
-            👋 Fragen? Schreib uns!
-        </div>
-        <div class="whatsapp-icon-container">
-            <svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
             <span class="notification-badge">1</span>
         </div>
     </a>
